# Training-0

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: backend.yml  docker.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0e896193e05b_initial_migration.py  14ebd55e7469_initial_migration.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: health.py  projects.py  tasks.py
backend/app/core/: config.py
backend/app/db/: base.py  dependencies.py  session.py
backend/app/models/: base.py  project.py  task.py
backend/app/repositories/: base.py  project.py  task.py
backend/app/schemas/: common.py  health.py  project.py  task.py
backend/app/services/: project.py  task.py
docs/: api.md  architecture.md  deployment.md  development.md
frontend/: Dockerfile  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/api/: client.ts
frontend/src/lib/components/: Header.svelte
frontend/src/lib/types/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/projects/[id]/: +page.svelte
infra/docker/: nginx.conf  production-compose.yml
infra/scripts/: wait-for-db.sh
